--- a/BubbleHoverButton/BubbleHoverButton.css
+++ b/BubbleHoverButton/BubbleHoverButton.css
@@ -15,7 +15,7 @@
 
 .su_button_circle{
 	background-color: red;
-	border-radius: 1000px;
+	border-radius: 50%/* 1000px */;
 	position: absolute;
 	left:0;
 	top:0;
@@ -28,18 +28,18 @@
 }
 
 .button_su_inner{
-		display: inline-block;
-		background: #F8B627;
-		color: #F4F4F4;
-		font-size: 16px;
-		font-weight: normal;
-		width: 132px;
-		text-align: center;
-		border-radius: 3px;
-		transition: 400ms;
-		text-decoration: none;
-		padding: 22px;
-		/* z-index: 100000; */
+	display: inline-block;
+	background: #F8B627;
+	color: #F4F4F4;
+	font-size: 16px;
+	font-weight: normal;
+	/* width: 132px; */
+	text-align: center;
+	border-radius: 3px;
+	transition: 400ms;
+	text-decoration: none;
+	padding: 22px;
+	/* z-index: 100000; */
 }
 
 .button_text_container{
@@ -49,7 +49,6 @@
 
 .explode-circle {
 	animation: explode 0.5s forwards;
-
 }
 
 .desplode-circle{
